[gd_scene load_steps=8 format=3 uid="uid://myjo8apghjix"]

[ext_resource type="Script" path="res://Pound.gd" id="1_8gqfx"]
[ext_resource type="Texture2D" uid="uid://cscgy0qs2d88u" path="res://Assets/Main Characters/Battery/slamcontact.png" id="2_ubobk"]

[sub_resource type="Animation" id="Animation_07bpo"]
resource_name = "slam"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ubobk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-5, 13), Vector2(-6, 13), Vector2(-10, 13), Vector2(-15, 13), Vector2(-19, 13), Vector2(-24, 13), Vector2(-26, 13), Vector2(-29, 13)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../RightPound:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(7, 13), Vector2(8, 13), Vector2(12, 13), Vector2(16, 13), Vector2(19, 13), Vector2(23, 13), Vector2(27, 13), Vector2(30, 13)]
}

[sub_resource type="Animation" id="Animation_ta8pe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ubobk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../RightPound:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 13)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_scsem"]
_data = {
"RESET": SubResource("Animation_ta8pe"),
"slam": SubResource("Animation_07bpo")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_630pa"]
radius = 4.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t2dpj"]
radius = 4.0
height = 8.0

[node name="Pound" type="Area2D"]
z_index = 1
script = ExtResource("1_8gqfx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../LeftPound")
libraries = {
"": SubResource("AnimationLibrary_scsem")
}
autoplay = "slam"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ubobk")
hframes = 9

[node name="LeftPound" type="CollisionShape2D" parent="."]
position = Vector2(-5, 13)
shape = SubResource("CapsuleShape2D_630pa")

[node name="RightPound" type="CollisionShape2D" parent="."]
position = Vector2(7, 13)
shape = SubResource("CapsuleShape2D_t2dpj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
